k8s/pipelines/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi
  namespace: nifi
  labels:
    app: nifi
    tier: backend
spec:
  selector:
    app: nifi
    component: dataflow
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
